--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "coveralls": "^2.11.9",
     "istanbul": "^0.4.3",
     "mocha": "^2.4.5"
+  },
+  "dependencies": {
+    "lodash": "^4.15.0"
   }
 }
