--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,6 @@
 language: node_js
 node_js:
   - "4"
-after_success: 'npm run coveralls'
+after_success:
+  - 'npm run -s coverage'
+  - 'npm run -s lint'
